# gnome-extensions-app

./: .editorconfig  .gitignore  .gitlab-ci.yml  NEWS  README.md  REUSE.toml  gnome-extensions-app.doap  logo.png.license  meson.build  meson.options
.gitlab-ci/: commit-rules.yml
build-aux/flatpak/: org.gnome.Extensions.json  org.gnome.Extensions.json.license
build-aux/meson/: check-version.py
data/: meson.build  org.gnome.Extensions.data.gresource.xml.in  org.gnome.Extensions.desktop.in.in  org.gnome.Extensions.gschema.xml
data/css/: style.css
data/dbus-interfaces/: org.gnome.Shell.Extensions.xml
data/icons/: REUSE.toml  meson.build
data/metainfo/: meson.build  org.gnome.Extensions.metainfo.xml.in
data/ui/: extension-row.ui  extensions-window.ui  shortcuts-dialog.ui
js/: config.js.in  extensionManager.js  extensionRow.js  extensionUtils.js  extensionsWindow.js  gnome-extensions-app.in  main.js  meson.build  org.gnome.Extensions.in  org.gnome.Extensions.src.gresource.xml.in
po/: LINGUAS  POTFILES.in  ab.po  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+56 more)
subprojects/: libshew.wrap
tools/: eslint.config.js  package-lock.json  package.json  run-eslint.sh
