# SPDX-FileCopyrightText: 2019 Florian Müllner <fmuellner@gnome.org>
#
# SPDX-License-Identifier: GPL-2.0-or-later

option('package_name',
  type: 'string',
  description: 'The gettext domain name',
)
option('profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default'
)
